--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 </div>
             </div>
         </section>
+
+        <script src="js/deposit.js"></script>
     </main>
 </body>
 
