--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </section>
 
         <script src="js/deposit.js"></script>
+        <script src="js/withdraw.js"></script>
     </main>
 </body>
 
